--- a/config.json
+++ b/config.json
@@ -23,6 +23,17 @@
     "type": "three",
     "alpha": true,
     "antialias": true,
-    "precision": "mediump"
+    "precision": "mediump",
+    "context": null,
+    "premultipliedAlpha": true,
+    "stencil": true,
+    "depth": true,
+    "logarithmicDepthBuffer": true
+  },
+  "camera": {
+    "fov": "0.8 * 180 / Math.PI",
+    "ratio": "window.clientWidth / window.clientHeight",
+    "near": 0.01,
+    "far": 2000
   }
 }
